Fixed text aligning

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,17 @@
     margin: 0;
     padding: 0;
     font-family: 'Lexend Deca', sans-serif;
-    background-color: #FFFBF5;
 }
 
 body {
+    background-color: #FFFBF5;
+    text-align: center;
     color: #7743DB;
+}
+
+#header {
+    background-color: #C3ACD0;
+    padding: 5rem;
+    color: black;
+    font-size: 30px;
 }
